// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should only show instance table column if result data is empty 1`] = `
Object {
  "body": Array [],
  "head": Array [
    Object {
      "id": "decisionDefinitionId",
      "label": "Decision Definition Id",
      "title": "Decision Definition Id",
    },
    Object {
      "id": "decisionInstanceId",
      "label": "Decision Instance Id",
      "title": "Decision Instance Id",
    },
    Object {
      "id": "processInstanceId",
      "label": "Process Instance Id",
      "title": "Process Instance Id",
    },
    Object {
      "id": "engineName",
      "label": "Engine Name",
      "title": "Engine Name",
    },
  ],
}
`;

exports[`should return correct table props for decision tables 1`] = `
Object {
  "body": Array [
    Array [
      "bar",
      "foo",
      "456",
      "1",
      "12",
      "",
      "1",
    ],
    Array [
      "abc",
      "xyz",
      "456",
      "1",
      "",
      "true",
      "8",
    ],
  ],
  "head": Array [
    Object {
      "id": "decisionDefinitionId",
      "label": "Decision Definition Id",
      "title": "Decision Definition Id",
    },
    Object {
      "id": "decisionInstanceId",
      "label": "Decision Instance Id",
      "title": "Decision Instance Id",
    },
    Object {
      "id": "processInstanceId",
      "label": "Process Instance Id",
      "title": "Process Instance Id",
    },
    Object {
      "id": "engineName",
      "label": "Engine Name",
      "title": "Engine Name",
    },
    Object {
      "id": "inputVariable:var1",
      "label": <React.Fragment>
        <span
          className="variableExtension"
        >
          InputVar
          : 
        </span>
        Var 1
      </React.Fragment>,
      "title": "Var 1",
      "type": "inputVariables",
    },
    Object {
      "id": "inputVariable:var2",
      "label": <React.Fragment>
        <span
          className="variableExtension"
        >
          InputVar
          : 
        </span>
        Var 2
      </React.Fragment>,
      "title": "Var 2",
      "type": "inputVariables",
    },
    Object {
      "id": "outputVariable:result",
      "label": <React.Fragment>
        <span
          className="variableExtension"
        >
          OutputVar
          : 
        </span>
        Result
      </React.Fragment>,
      "title": "Result",
      "type": "outputVariables",
    },
  ],
}
`;
